Updated About Me section with personal background and details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Software Developer</title>
+    <title>Manzi.Y.P ISHIMWE - Software Developer</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -36,17 +36,47 @@
             </div>
         </section>
 
-        <section id="about" class="section">
+
+            <!--  <section id="about" class="section">
+                    <h2 class="section-title">About Me</h2>
+                    <div class="about-content">
+                        <p>
+                            I'm a dedicated junior software developer with a passion for creating efficient and user-friendly applications. 
+                            My journey in software development has led me to work with various technologies and frameworks, 
+                            always eager to learn and take on new challenges.
+                        </p>
+                        <p>
+                            I enjoy working on both frontend and backend development, with experience in team collaboration 
+                            and solo projects. I'm always looking for opportunities to grow and contribute to meaningful projects.
+                        </p>
+                    </div>
+                </section> -->
+
+               <section id="about" class="section">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p>
-                    I'm a dedicated junior software developer with a passion for creating efficient and user-friendly applications. 
-                    My journey in software development has led me to work with various technologies and frameworks, 
-                    always eager to learn and take on new challenges.
+                    Hi! I'm a junior software developer with a passion for creating applications that solve real-world problems. 
+                    After graduating from Algonquin College in Ottawa, Canada with a degree in Computer Programming, my journey in tech 
+                    has been driven by my love for using modern technologies to tackle everyday challenges.
                 </p>
                 <p>
-                    I enjoy working on both frontend and backend development, with experience in team collaboration 
-                    and solo projects. I'm always looking for opportunities to grow and contribute to meaningful projects.
+                    What initially drew me to programming was the ability to solve real-world issues through code – there's something 
+                    incredibly satisfying about turning a complex problem into an elegant solution that people can actually use and benefit from.
+                </p>
+                <p>
+                    I specialize in full-stack development, working with technologies like React, Spring Boot, Node.js, and various database systems. 
+                    I'm particularly passionate about Spring Boot development, and you'll often find me working in IntelliJ with MySQL databases. 
+                    What I find most rewarding about development is the process of taking an idea from concept to a working application that users can actually benefit from.
+                </p>
+                <p>
+                    When I'm not coding, you can find me gaming, building PCs, or watching basketball and football games. I believe these hobbies 
+                    actually complement my development skills – gaming keeps me thinking about user experience, and building PCs gives me a deeper 
+                    appreciation for how hardware and software work together.
+                </p>
+                <p>
+                    Based in Ottawa, Canada, I'm open to remote opportunities and freelance projects. Let's connect and discuss how we can work together! 
+                    Feel free to reach out to discuss opportunities – I'm always happy to chat about technology and development.
                 </p>
             </div>
         </section>
@@ -137,8 +167,8 @@
                 </p>
                 <div class="contact-info">
                     <a href="mailto:your.email@example.com">📧 manzi.ishimwe2023@gmail.com</a>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank">💼 LinkedIn</a>
-                    <a href="https://github.com/yourusername" target="_blank">🔗 GitHub</a>
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank">💼 www.linkedin.com/in/manzi-ishimwe</a>
+                    <a href="https://github.com/yourusername" target="_blank">🔗 https://github.com/Manzi004</a>
                 </div>
             </div>
         </section>
