Enhanced home section with animations and improved UX

--- a/index.html
+++ b/index.html
@@ -29,30 +29,35 @@
     <main class="container">
         <section id="home">
             <div class="hero">
-                <h1>Welcome to My Portfolio</h1>
-                <p>I'm a passionate junior software developer specializing in full-stack development with experience in React, Spring Boot, Node.js, and more.</p>
-                <a href="#projects" class="btn">View My Work</a>
-                <a href="#contact" class="btn">Get In Touch</a>
+                <h1 class="hero-title">Building Modern Solutions with Full-Stack Expertise</h1>
+                <p class="hero-subtitle">Algonquin College graduate specializing in React, Spring Boot, and Node.js. I transform complex business requirements into clean, scalable applications that solve real-world problems.</p>
+                <div class="tech-badges">
+                    <span class="tech-badge">React</span>
+                    <span class="tech-badge">Spring Boot</span>
+                    <span class="tech-badge">Node.js</span>
+                    <span class="tech-badge">MySQL</span>
+                    <span class="tech-badge">Docker</span>
+                </div>
+                <div class="hero-buttons">
+                    <a href="#projects" class="btn btn-primary">
+                        <span>View My Work</span>
+                        <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M7 7h10v10"></path>
+                            <path d="M7 17L17 7"></path>
+                        </svg>
+                    </a>
+                    <a href="#contact" class="btn btn-secondary">
+                        <span>Get In Touch</span>
+                        <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                            <path d="M22 6l-10 7L2 6"></path>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </section>
 
-
-            <!--  <section id="about" class="section">
-                    <h2 class="section-title">About Me</h2>
-                    <div class="about-content">
-                        <p>
-                            I'm a dedicated junior software developer with a passion for creating efficient and user-friendly applications. 
-                            My journey in software development has led me to work with various technologies and frameworks, 
-                            always eager to learn and take on new challenges.
-                        </p>
-                        <p>
-                            I enjoy working on both frontend and backend development, with experience in team collaboration 
-                            and solo projects. I'm always looking for opportunities to grow and contribute to meaningful projects.
-                        </p>
-                    </div>
-                </section> -->
-
-               <section id="about" class="section">
+        <section id="about" class="section">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p>
@@ -166,9 +171,9 @@
                     I'm always interested in new opportunities and collaborations. Feel free to reach out!
                 </p>
                 <div class="contact-info">
-                    <a href="mailto:your.email@example.com">📧 manzi.ishimwe2023@gmail.com</a>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank">💼 www.linkedin.com/in/manzi-ishimwe</a>
-                    <a href="https://github.com/yourusername" target="_blank">🔗 https://github.com/Manzi004</a>
+                    <a href="mailto:manzi.ishimwe2023@gmail.com">📧 manzi.ishimwe2023@gmail.com</a>
+                    <a href="https://www.linkedin.com/in/manzi-ishimwe" target="_blank">💼 LinkedIn</a>
+                    <a href="https://github.com/Manzi004" target="_blank">🔗 GitHub</a>
                 </div>
             </div>
         </section>
@@ -176,7 +181,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Manzi.Y.I  All rights reserved.</p>
+            <p>&copy; 2025 Manzi.Y.I All rights reserved.</p>
         </div>
     </footer>
 
