added a picture for Home Page and update the code

--- a/index.html
+++ b/index.html
@@ -29,34 +29,45 @@
     <main class="container">
         <section id="home">
             <div class="hero">
-                <h1 class="hero-title">Building Modern Solutions with Full-Stack Expertise</h1>
-                <p class="hero-subtitle">Algonquin College graduate specializing in React, Spring Boot, and Node.js. I transform complex business requirements into clean, scalable applications that solve real-world problems.</p>
-                <div class="tech-badges">
-                    <span class="tech-badge">React</span>
-                    <span class="tech-badge">Spring Boot</span>
-                    <span class="tech-badge">Node.js</span>
-                    <span class="tech-badge">MySQL</span>
-                    <span class="tech-badge">Docker</span>
-                </div>
-                <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">
-                        <span>View My Work</span>
-                        <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M7 7h10v10"></path>
-                            <path d="M7 17L17 7"></path>
-                        </svg>
-                    </a>
-                    <a href="#contact" class="btn btn-secondary">
-                        <span>Get In Touch</span>
-                        <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <path d="M22 6l-10 7L2 6"></path>
-                        </svg>
-                    </a>
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1 class="hero-title">Building Modern Solutions with Full-Stack Expertise</h1>
+                        <p class="hero-subtitle">Algonquin College graduate specializing in React, Spring Boot, and Node.js. I transform complex business requirements into clean, scalable applications that solve real-world problems.</p>
+                        <div class="tech-badges">
+                            <span class="tech-badge">React</span>
+                            <span class="tech-badge">Spring Boot</span>
+                            <span class="tech-badge">Node.js</span>
+                            <span class="tech-badge">MySQL</span>
+                            <span class="tech-badge">Docker</span>
+                        </div>
+                        <div class="hero-buttons">
+                            <a href="#projects" class="btn btn-primary">
+                                <span>View My Work</span>
+                                <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M7 7h10v10"></path>
+                                    <path d="M7 17L17 7"></path>
+                                </svg>
+                            </a>
+                            <a href="#contact" class="btn btn-secondary">
+                                <span>Get In Touch</span>
+                                <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                                    <path d="M22 6l-10 7L2 6"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hero-image">
+                        <div class="profile-avatar">
+                            <!-- <span class="avatar-initials">M.I</span> -->
+                            <img src="images/profile-photo.jpg" alt="Manzi Yves Patrick ISHIMWE" class="profile-photo">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-
+        
         <section id="about" class="section">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
@@ -113,52 +124,96 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        School Management System
+                        <div class="mockup-browser">
+                            <div class="browser-header">
+                                <div class="browser-dots">
+                                    <span></span><span></span><span></span>
+                                </div>
+                            </div>
+                            <div class="browser-content">
+                                <h4>School Management System</h4>
+                                <div class="mockup-features">
+                                    <div class="feature-item">📚 Student Management</div>
+                                    <div class="feature-item">👨‍🏫 Teacher Portal</div>
+                                    <div class="feature-item">📊 Grade Tracking</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="project-content">
                         <h3>School Management System</h3>
-                        <p>A comprehensive full-stack application for managing school operations with modern technologies.</p>
+                        <p>A comprehensive full-stack web application designed to streamline school administrative operations. Features student enrollment, course scheduling, grade tracking, and role-based authentication with real-time data updates.</p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Spring Boot</span>
                             <span class="tech-tag">SQL Server</span>
                             <span class="tech-tag">Docker</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn">GitHub</a>
+                        <a href="https://github.com/Manzi004/school-management-system" class="btn" target="_blank">View Code</a>
+                        <a href="https://github.com/Manzi004/school-management-system" class="btn" target="_blank">GitHub</a>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        Cyber - Student Management
+                        <div class="mockup-browser">
+                            <div class="browser-header">
+                                <div class="browser-dots">
+                                    <span></span><span></span><span></span>
+                                </div>
+                            </div>
+                            <div class="browser-content">
+                                <h4>Cyber - VM Management</h4>
+                                <div class="mockup-features">
+                                    <div class="feature-item">👥 Multi-user System</div>
+                                    <div class="feature-item">💻 VM Allocation</div>
+                                    <div class="feature-item">📅 Resource Scheduling</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="project-content">
                         <h3>Cyber - Student & VM Management</h3>
-                        <p>A team-developed system for managing students, professors, and virtual machines efficiently.</p>
+                        <p>A collaborative team-developed system for managing educational resources including student profiles, professor accounts, and virtual machine allocations. Demonstrates teamwork skills and NoSQL database expertise.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Node.js</span>
                             <span class="tech-tag">MongoDB</span>
                             <span class="tech-tag">Team Project</span>
+                            <span class="tech-tag">Express.js</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn">GitHub</a>
+                        <a href="https://github.com/Manzi004/cyber-student-vm-management" class="btn" target="_blank">View Code</a>
+                        <a href="https://github.com/Manzi004/cyber-student-vm-management" class="btn" target="_blank">GitHub</a>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        Nutrition Store App
+                        <div class="mockup-browser">
+                            <div class="browser-header">
+                                <div class="browser-dots">
+                                    <span></span><span></span><span></span>
+                                </div>
+                            </div>
+                            <div class="browser-content">
+                                <h4>Nutrition Store App</h4>
+                                <div class="mockup-features">
+                                    <div class="feature-item">📦 Inventory Tracking</div>
+                                    <div class="feature-item">💰 Sales Management</div>
+                                    <div class="feature-item">📱 Mobile Interface</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="project-content">
                         <h3>Nutrition Store Mobile App</h3>
-                        <p>A mobile application designed to help manage nutrition store operations and inventory.</p>
+                        <p>A mobile application designed to digitize nutrition store operations, featuring inventory management, product catalog, sales tracking, and real-time stock monitoring to replace manual processes.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Mobile Development</span>
+                            <span class="tech-tag">Inventory Management</span>
                             <span class="tech-tag">Business Logic</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn">GitHub</a>
+                        <a href="https://github.com/Manzi004/nutrition-store-app" class="btn" target="_blank">View Code</a>
+                        <a href="https://github.com/Manzi004/nutrition-store-app" class="btn" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
