add code to update the index file

--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
                             <a href="https://github.com/Manzi004/cyber-student-vm-management" class="btn btn-primary" target="_blank" rel="noopener">
                                 <span>🔗 View Code</span>
                             </a>
-                            <a href="https://github.com/Manzi004/cyber-student-vm-management#readme" class="btn btn-secondary" target="_blank" rel="noopener">
+                            <!-- <a href="https://github.com/Manzi004/cyber-student-vm-management#readme" class="btn btn-secondary" target="_blank" rel="noopener">
                                 <span>📖 Documentation</span>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -359,12 +359,12 @@
                             <span class="status-badge status-completed">✅ Completed</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Manzi004/nutrition-store-app" class="btn btn-primary" target="_blank" rel="noopener">
+                            <a href="https://github.com/elga0013/Android_Final_Project" class="btn btn-primary" target="_blank" rel="noopener">
                                 <span>🔗 View Code</span>
                             </a>
-                            <a href="https://github.com/Manzi004/nutrition-store-app#readme" class="btn btn-secondary" target="_blank" rel="noopener">
+                            <!-- <a href="https://github.com/Manzi004/nutrition-store-app#readme" class="btn btn-secondary" target="_blank" rel="noopener">
                                 <span>📖 Documentation</span>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
